chore: clean unused resources, set settings properly, add favicon

--- a/settings.json
+++ b/settings.json
@@ -7,8 +7,6 @@
     "debug": false
   },
   "platformSettings": {
-    "path": "./static",
-    "log": true,
-    "showVersion": true
+    "path": "./static"
   }
 }
