--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dev.fxdigital.snake",
   "description": "snake",
   "dependencies": {
-    "@lightningjs/sdk": "^4.8.3"
+    "@lightningjs/sdk": "^4.8.3",
+    "@lightningjs/ui-components": "^1.3.1"
   }
 }
