--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "dev.fxdigital.snake",
   "description": "snake",
   "dependencies": {
+    "@lightningjs/cli": "^2.8.0",
     "@lightningjs/sdk": "^4.8.3",
     "@lightningjs/ui-components": "^1.3.1"
+  },
+  "scripts": {
+    "build": "lng build"
   }
 }
